--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,58 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b3acfe">  <td>20/02/25 16:59:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5442a311]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1234776885</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>20/02/25 17:00:11</td>   <td>16112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5442a311]">bookingSingleRoomWithThreeAdults_TC_1</td> 
-  <td>main@1234776885</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/25 17:01:12</td>   <td>77160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5442a311]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1234776885</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/25 06:20:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="bca669">  <td>20/02/25 06:21:00</td>   <td>16530</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingFlightsWithmultipleCities_TC_6(java.lang.reflect.Method)[pri:6, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">bookingFlightsWithmultipleCities_TC_6</td> 
+  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/25 06:21:31</td>   <td>47958</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/25 06:21:31</td>   <td>47998</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="bca669">  <td>20/02/25 06:21:44</td>   <td>60340</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingFlightAndHotelForSingleCity_TC_7(java.lang.reflect.Method)[pri:7, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">bookingFlightAndHotelForSingleCity_TC_7</td> 
+  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/25 06:23:19</td>   <td>155292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/25 06:23:19</td>   <td>155309</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="bca669">  <td>20/02/25 06:23:32</td>   <td>169106</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingFlightAndHotelForMultipleCity_TC_8(java.lang.reflect.Method)[pri:8, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">bookingFlightAndHotelForMultipleCity_TC_8</td> 
+  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/25 06:24:04</td>   <td>200457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/25 06:24:04</td>   <td>200499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="bca669">  <td>20/02/25 06:24:17</td>   <td>213403</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.withoutAirBookingForSingleCity_TC_19(java.lang.reflect.Method)[pri:9, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">withoutAirBookingForSingleCity_TC_19</td> 
+  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/25 06:40:07</td>   <td>1163743</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/25 06:50:08</td>   <td>1764293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="bca669">  <td>20/02/25 06:50:20</td>   <td>1776786</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.getWithoutAir_TC_20(java.lang.reflect.Method)[pri:10, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">getWithoutAir_TC_20</td> 
+  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/25 06:50:20</td>   <td>1776789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/25 06:50:20</td>   <td>1776808</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="bca669">  <td>20/02/25 06:50:33</td>   <td>1789792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.removeAddedCity_TC_17(java.lang.reflect.Method)[pri:11, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">removeAddedCity_TC_17</td> 
+  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/25 06:50:33</td>   <td>1789795</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/25 06:50:33</td>   <td>1789849</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="bca669">  <td>20/02/25 06:50:49</td>   <td>1805473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingDetailswithPremiumEcomomy_TC_18(java.lang.reflect.Method)[pri:12, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">bookingDetailswithPremiumEcomomy_TC_18</td> 
+  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/25 06:50:49</td>   <td>1805476</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/25 06:50:51</td>   <td>1807710</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="bca669">  <td>20/02/25 06:51:08</td>   <td>1824762</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.verifySpotlightLink_TC_14(java.lang.reflect.Method)[pri:13, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">verifySpotlightLink_TC_14</td> 
+  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/25 06:51:08</td>   <td>1824764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/25 06:51:08</td>   <td>1825087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="bca669">  <td>20/02/25 06:51:24</td>   <td>1840303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.dateChanging_TC_9(java.lang.reflect.Method)[pri:14, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">dateChanging_TC_9</td> 
+  <td>main@2068434592</td>   <td></td> </tr>
+<tr bgcolor="657a99">  <td>20/02/25 06:51:24</td>   <td>1840305</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@6e06451e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2068434592</td>   <td></td> </tr>
 </table>
