--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -15,6 +15,26 @@
 <td>smoke </td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>bookingTwoRoomThreeAdultOneChild_TC_4</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingTwoRoomTwoAdult_TC_3</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingSingleRoomOneAdultOneChild_TC_2</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingTwoRoomTwoAdultTwoChild_TC_5</td>
+<td>smoke </td>
+</tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
