--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="80ebad">  <td>20/02/25 17:02:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@239963d8]">bookingSingleRoomWithThreeAdults_TC_1</td> 
-  <td>pool-1-thread-1@1454382205</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>20/02/25 17:02:03</td>   <td>-17792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@239963d8]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-1@1454382205</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>20/02/25 17:04:26</td>   <td>125348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@239963d8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-1@1454382205</td>   <td></td> </tr>
+<tr bgcolor="67c1fc">  <td>20/02/25 04:58:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomOneAdultOneChild_TC_2(java.lang.reflect.Method)[pri:2, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5cb9f472]">bookingSingleRoomOneAdultOneChild_TC_2</td> 
+  <td>TestNG-test=Test-2@1465486884</td>   <td></td> </tr>
+<tr bgcolor="67c1fc">  <td>20/02/25 04:55:37</td>   <td>-191434</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5cb9f472]">bookingSingleRoomWithThreeAdults_TC_1</td> 
+  <td>TestNG-test=Test-1@1287485467</td>   <td></td> </tr>
+<tr bgcolor="67c1fc">  <td>20/02/25 05:06:33</td>   <td>464636</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingTwoRoomThreeAdultOneChild_TC_4(java.lang.reflect.Method)[pri:4, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5cb9f472]">bookingTwoRoomThreeAdultOneChild_TC_4</td> 
+  <td>TestNG-test=Test-4@479664171</td>   <td></td> </tr>
+<tr bgcolor="67c1fc">  <td>20/02/25 05:10:53</td>   <td>724713</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingTwoRoomTwoAdultTwoChild_TC_5(java.lang.reflect.Method)[pri:5, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5cb9f472]">bookingTwoRoomTwoAdultTwoChild_TC_5</td> 
+  <td>TestNG-test=Test-5@850045750</td>   <td></td> </tr>
+<tr bgcolor="67c1fc">  <td>20/02/25 05:03:01</td>   <td>252786</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingTwoRoomTwoAdult_TC_3(java.lang.reflect.Method)[pri:3, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5cb9f472]">bookingTwoRoomTwoAdult_TC_3</td> 
+  <td>TestNG-test=Test-3@469524696</td>   <td></td> </tr>
+<tr bgcolor="fa7d9b">  <td>20/02/25 04:55:23</td>   <td>-205395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5cb9f472]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@850045750</td>   <td></td> </tr>
+<tr bgcolor="fa7d9b">  <td>20/02/25 04:58:34</td>   <td>-14005</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5cb9f472]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@850045750</td>   <td></td> </tr>
+<tr bgcolor="fa7d9b">  <td>20/02/25 05:02:47</td>   <td>238587</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5cb9f472]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@850045750</td>   <td></td> </tr>
+<tr bgcolor="fa7d9b">  <td>20/02/25 05:06:17</td>   <td>448620</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5cb9f472]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@850045750</td>   <td></td> </tr>
+<tr bgcolor="fa7d9b">  <td>20/02/25 05:10:39</td>   <td>711131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5cb9f472]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@850045750</td>   <td></td> </tr>
+<tr bgcolor="fa7d9b">  <td>20/02/25 04:58:34</td>   <td>-14031</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5cb9f472]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@850045750</td>   <td></td> </tr>
+<tr bgcolor="fa7d9b">  <td>20/02/25 05:02:47</td>   <td>238559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5cb9f472]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@850045750</td>   <td></td> </tr>
+<tr bgcolor="fa7d9b">  <td>20/02/25 05:06:16</td>   <td>447881</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5cb9f472]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@850045750</td>   <td></td> </tr>
+<tr bgcolor="fa7d9b">  <td>20/02/25 05:10:39</td>   <td>711110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5cb9f472]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@850045750</td>   <td></td> </tr>
+<tr bgcolor="fa7d9b">  <td>20/02/25 05:14:51</td>   <td>962463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5cb9f472]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-5@850045750</td>   <td></td> </tr>
 </table>
