--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,7 +11,47 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>bookingSingleRoomWithThreeAdults_TC_1</td>
+<td>bookingFlightAndHotelForMultipleCity_TC_8</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifySpotlightLink_TC_14</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingFlightsWithmultipleCities_TC_6</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>removeAddedCity_TC_17</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>dateChanging_TC_9</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingFlightAndHotelForSingleCity_TC_7</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>withoutAirBookingForSingleCity_TC_19</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>getWithoutAir_TC_20</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingDetailswithPremiumEcomomy_TC_18</td>
 <td>smoke </td>
 </tr>
 <tr>
