--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,68 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="80ebad">  <td>20/02/25 17:02:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@239963d8]">bookingSingleRoomWithThreeAdults_TC_1</td> 
-  <td>pool-1-thread-1@1454382205</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>20/02/25 17:02:03</td>   <td>-17792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@239963d8]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-1@1454382205</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>20/02/25 17:04:26</td>   <td>125348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@239963d8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-1@1454382205</td>   <td></td> </tr>
+<tr bgcolor="8cc0ba">  <td>20/03/05 17:13:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingDetailswithPremiumEcomomy_TC_18(java.lang.reflect.Method)[pri:12, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">bookingDetailswithPremiumEcomomy_TC_18</td> 
+  <td>pool-1-thread-7@613368021</td>   <td></td> </tr>
+<tr bgcolor="8cc0ba">  <td>20/03/05 17:08:58</td>   <td>-282174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingFlightAndHotelForMultipleCity_TC_8(java.lang.reflect.Method)[pri:8, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">bookingFlightAndHotelForMultipleCity_TC_8</td> 
+  <td>pool-1-thread-4@1604180055</td>   <td></td> </tr>
+<tr bgcolor="8cc0ba">  <td>20/03/05 17:07:46</td>   <td>-354192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingFlightsWithmultipleCities_TC_6(java.lang.reflect.Method)[pri:6, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">bookingFlightsWithmultipleCities_TC_6</td> 
+  <td>pool-1-thread-6@1276130445</td>   <td></td> </tr>
+<tr bgcolor="8cc0ba">  <td>20/03/05 16:57:17</td>   <td>-983420</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomOneAdultOneChild_TC_2(java.lang.reflect.Method)[pri:2, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">bookingSingleRoomOneAdultOneChild_TC_2</td> 
+  <td>pool-1-thread-2@1591298008</td>   <td></td> </tr>
+<tr bgcolor="8cc0ba">  <td>20/03/05 16:53:37</td>   <td>-1202940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">bookingSingleRoomWithThreeAdults_TC_1</td> 
+  <td>pool-1-thread-1@2023946505</td>   <td></td> </tr>
+<tr bgcolor="8cc0ba">  <td>20/03/05 17:02:25</td>   <td>-674546</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingTwoRoomThreeAdultOneChild_TC_4(java.lang.reflect.Method)[pri:4, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">bookingTwoRoomThreeAdultOneChild_TC_4</td> 
+  <td>pool-1-thread-5@397581242</td>   <td></td> </tr>
+<tr bgcolor="8cc0ba">  <td>20/03/05 17:03:37</td>   <td>-603475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingTwoRoomTwoAdultTwoChild_TC_5(java.lang.reflect.Method)[pri:5, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">bookingTwoRoomTwoAdultTwoChild_TC_5</td> 
+  <td>pool-1-thread-6@1276130445</td>   <td></td> </tr>
+<tr bgcolor="8cc0ba">  <td>20/03/05 16:58:26</td>   <td>-913663</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingTwoRoomTwoAdult_TC_3(java.lang.reflect.Method)[pri:3, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">bookingTwoRoomTwoAdult_TC_3</td> 
+  <td>pool-1-thread-3@285251688</td>   <td></td> </tr>
+<tr bgcolor="8cc0ba">  <td>20/03/05 17:16:43</td>   <td>182960</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.dateChanging_TC_9(java.lang.reflect.Method)[pri:14, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">dateChanging_TC_9</td> 
+  <td>pool-1-thread-7@613368021</td>   <td></td> </tr>
+<tr bgcolor="8cc0ba">  <td>20/03/05 17:12:29</td>   <td>-70879</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.removeAddedCity_TC_17(java.lang.reflect.Method)[pri:11, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">removeAddedCity_TC_17</td> 
+  <td>pool-1-thread-4@1604180055</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/05 16:53:13</td>   <td>-1226738</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-7@613368021</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/05 16:56:54</td>   <td>-1006233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-7@613368021</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/05 16:58:04</td>   <td>-936015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-7@613368021</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/05 17:02:04</td>   <td>-696302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-7@613368021</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/05 17:03:14</td>   <td>-626103</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-7@613368021</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/05 17:07:24</td>   <td>-375798</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-7@613368021</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/05 17:08:34</td>   <td>-305567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-7@613368021</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/05 17:12:04</td>   <td>-95946</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-7@613368021</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/05 17:13:17</td>   <td>-22870</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-7@613368021</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/05 17:15:27</td>   <td>106523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-7@613368021</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/05 17:16:20</td>   <td>159726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-7@613368021</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/05 17:17:25</td>   <td>224526</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@31ef45e3]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-10@633282018</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/05 17:18:21</td>   <td>281026</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@31ef45e3]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-10@633282018</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/05 17:18:54</td>   <td>313752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@31ef45e3]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-10@633282018</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/05 17:19:28</td>   <td>347812</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@31ef45e3]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-10@633282018</td>   <td></td> </tr>
+<tr bgcolor="7fa893">  <td>20/03/05 17:20:01</td>   <td>381169</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.HomePageTestScript@31ef45e3]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-10@633282018</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>20/03/05 17:19:19</td>   <td>338695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyCity_TC_10(java.lang.reflect.Method)[pri:18, instance:com.tripmasters.framework.testScript.HomePageTestScript@31ef45e3]">verifyCity_TC_10</td> 
+  <td>pool-1-thread-3@285251688</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>20/03/05 17:20:23</td>   <td>403353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyFooterText_TC_16(java.lang.reflect.Method)[pri:20, instance:com.tripmasters.framework.testScript.HomePageTestScript@31ef45e3]">verifyFooterText_TC_16</td> 
+  <td>pool-1-thread-10@633282018</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>20/03/05 17:17:47</td>   <td>246679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyOtherVacationPackages_TC_12(java.lang.reflect.Method)[pri:16, instance:com.tripmasters.framework.testScript.HomePageTestScript@31ef45e3]">verifyOtherVacationPackages_TC_12</td> 
+  <td>pool-1-thread-3@285251688</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>20/03/05 17:18:44</td>   <td>304032</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyPopularVacationPackages_TC_13(java.lang.reflect.Method)[pri:17, instance:com.tripmasters.framework.testScript.HomePageTestScript@31ef45e3]">verifyPopularVacationPackages_TC_13</td> 
+  <td>pool-1-thread-3@285251688</td>   <td></td> </tr>
+<tr bgcolor="8cc0ba">  <td>20/03/05 17:15:48</td>   <td>128376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.verifySpotlightLink_TC_14(java.lang.reflect.Method)[pri:13, instance:com.tripmasters.framework.testScript.BookingPageTestScript@598067a5]">verifySpotlightLink_TC_14</td> 
+  <td>pool-1-thread-7@613368021</td>   <td></td> </tr>
+<tr bgcolor="c7cbad">  <td>20/03/05 17:19:50</td>   <td>369922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestScript.verifyStartAgainLink_TC_15(java.lang.reflect.Method)[pri:19, instance:com.tripmasters.framework.testScript.HomePageTestScript@31ef45e3]">verifyStartAgainLink_TC_15</td> 
+  <td>pool-1-thread-8@521943667</td>   <td></td> </tr>
 </table>
