--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,21 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.verifyMoreHighlightAndAttractionLinks_TC_11</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomOneAdultOneChild_TC_2</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingTwoRoomTwoAdultTwoChild_TC_5</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.getWithoutAir_TC_20</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.verifyPopularVacationPackages_TC_13</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingTwoRoomThreeAdultOneChild_TC_4</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.verifyCity_TC_10</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.verifyStartAgainLink_TC_15</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingFlightAndHotelForSingleCity_TC_7</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.withoutAirBookingForSingleCity_TC_19</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.verifyFooterText_TC_16</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingFlightsWithmultipleCities_TC_6</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingTwoRoomTwoAdult_TC_3</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.dateChanging_TC_9</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingFlightAndHotelForMultipleCity_TC_8</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.verifyOtherVacationPackages_TC_12</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.bookingDetailswithPremiumEcomomy_TC_18</td></tr>
+<tr><td>com.tripmasters.framework.testScript.BookingPageTestScript.removeAddedCity_TC_17</td></tr>
 </table>
