--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Suite">
-              <span class="suite-name border-passed">Suite</span>
+              <span class="suite-name border-failed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,21 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">1 method, 1 failed,   </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods passed suite-Suite"> (hide)</a> <!-- hide-methods passed suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
                     </span>
-                    <div class="method-list-content passed suite-Suite">
+                    <div class="method-list-content failed suite-Suite">
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.tripmasters.framework.testScript.BookingPageTestScript" hash-for-method="bookingSingleRoomWithThreeAdults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdu...)">bookingSingleRoomWithThreeAdults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdu...)</a> <!-- method navigator-link -->
+                        <img width="3%" src="failed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.tripmasters.framework.testScript.BookingPageTestScript" hash-for-method="verifySpotlightLink_TC_14(public void com.tripmasters.framework.testScript.BookingPageTestScript.verifySpotlightLink_TC_14(jav...)">verifySpotlightLink_TC_14(public void com.tripmasters.framework.testScript.BookingPageTestScript.verifySpotlightLink_TC_14(jav...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Suite -->
+                    </div> <!-- method-list-content failed suite-Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -117,22 +117,30 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-passed">
+          <div class="suite-Suite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
+              <img src="failed.png"/>
               <span class="class-name">com.tripmasters.framework.testScript.BookingPageTestScript</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="bookingSingleRoomWithThreeAdults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdu...)">
-                  </a> <!-- bookingSingleRoomWithThreeAdults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdu...) -->
-                  <span class="method-name">bookingSingleRoomWithThreeAdults_TC_1</span>
-                  <span class="parameters">(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method) throws java.lang.Exception)</span>
+                  <a name="verifySpotlightLink_TC_14(public void com.tripmasters.framework.testScript.BookingPageTestScript.verifySpotlightLink_TC_14(jav...)">
+                  </a> <!-- verifySpotlightLink_TC_14(public void com.tripmasters.framework.testScript.BookingPageTestScript.verifySpotlightLink_TC_14(jav...) -->
+                  <span class="method-name">verifySpotlightLink_TC_14</span>
+                  <span class="parameters">(public void com.tripmasters.framework.testScript.BookingPageTestScript.verifySpotlightLink_TC_14(java.lang.reflect.Method) throws java.lang.Exception)</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
+	at com.tripmasters.framework.pageActions.BookingPageAction.verifyLatinAmericPage(BookingPageAction.java:482)
+	at com.tripmasters.framework.testScript.BookingPageTestScript.verifySpotlightLink_TC_14(BookingPageTestScript.java:645)
+	at java.util.concurrent.ThreadPoolExecutor.runWorker(Unknown Source)
+	at java.util.concurrent.ThreadPoolExecutor$Worker.run(Unknown Source)
+	at java.lang.Thread.run(Unknown Source)
+... Removed 14 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
+          </div> <!-- suite-Suite-class-failed -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -150,11 +158,11 @@
   &lt;test name=&quot;Test&quot;&gt;
     &lt;groups&gt;
       &lt;run&gt;
-        &lt;include name=&quot;smoke&quot;/&gt;
-        &lt;include name=&quot;regression&quot;/&gt;
+        &lt;include name=&quot;testdemo&quot;/&gt;
       &lt;/run&gt;
     &lt;/groups&gt;
     &lt;classes&gt;
+      &lt;class name=&quot;com.tripmasters.framework.testScript.HomePageTestScript&quot;/&gt;
       &lt;class name=&quot;com.tripmasters.framework.testScript.BookingPageTestScript&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
@@ -169,7 +177,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (1 class)</span>
+                <span class="test-name">Test (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -180,10 +188,10 @@
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="test-group">
-              <span class="test-group-name">smoke</span>
+              <span class="test-group-name">testdemo</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">bookingSingleRoomWithThreeAdults_TC_1</span>
+                <span class="method-in-group-name">verifySpotlightLink_TC_14</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -205,14 +213,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'bookingSingleRoomWithThreeAdults_TC_1')
+data.setCell(0, 1, 'verifySpotlightLink_TC_14')
 data.setCell(0, 2, 'com.tripmasters.framework.testScript.BookingPageTestScript')
-data.setCell(0, 3, 125342);
+data.setCell(0, 3, 20388);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 20 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -227,9 +235,57 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">19 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.tripmasters.framework.testScript.BookingPageTestScript</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">bookingSingleRoomWithThreeAdults_TC_1</span>
+                <br/>
+                <span class="ignored-method-name">bookingSingleRoomOneAdultOneChild_TC_2</span>
+                <br/>
+                <span class="ignored-method-name">bookingTwoRoomTwoAdultTwoChild_TC_5</span>
+                <br/>
+                <span class="ignored-method-name">getWithoutAir_TC_20</span>
+                <br/>
+                <span class="ignored-method-name">bookingTwoRoomThreeAdultOneChild_TC_4</span>
+                <br/>
+                <span class="ignored-method-name">bookingFlightAndHotelForSingleCity_TC_7</span>
+                <br/>
+                <span class="ignored-method-name">withoutAirBookingForSingleCity_TC_19</span>
+                <br/>
+                <span class="ignored-method-name">bookingFlightsWithmultipleCities_TC_6</span>
+                <br/>
+                <span class="ignored-method-name">bookingTwoRoomTwoAdult_TC_3</span>
+                <br/>
+                <span class="ignored-method-name">dateChanging_TC_9</span>
+                <br/>
+                <span class="ignored-method-name">bookingFlightAndHotelForMultipleCity_TC_8</span>
+                <br/>
+                <span class="ignored-method-name">bookingDetailswithPremiumEcomomy_TC_18</span>
+                <br/>
+                <span class="ignored-method-name">removeAddedCity_TC_17</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.tripmasters.framework.testScript.HomePageTestScript</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">verifyMoreHighlightAndAttractionLinks_TC_11</span>
+                <br/>
+                <span class="ignored-method-name">verifyPopularVacationPackages_TC_13</span>
+                <br/>
+                <span class="ignored-method-name">verifyOtherVacationPackages_TC_12</span>
+                <br/>
+                <span class="ignored-method-name">verifyCity_TC_10</span>
+                <br/>
+                <span class="ignored-method-name">verifyStartAgainLink_TC_15</span>
+                <br/>
+                <span class="ignored-method-name">verifyFooterText_TC_16</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Suite" class="panel">
@@ -244,13 +300,11 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">bookingSingleRoomWithThreeAdults_TC_1(public void com.tripmasters.framework.testScript.BookingPageTestScript.bookingSingleRoomWithThreeAdu...)</span>
-                <span class="method-start">17793 ms</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">verifySpotlightLink_TC_14(public void com.tripmasters.framework.testScript.BookingPageTestScript.verifySpotlightLink_TC_14(jav...)</span>
+                <span class="method-start">15550 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">143141 ms</span>
-              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
