--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99f37e">  <td>20/02/25 17:00:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5442a311]">bookingSingleRoomWithThreeAdults_TC_1</td> 
-  <td>main@1234776885</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/25 16:59:55</td>   <td>-16112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5442a311]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1234776885</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>20/02/25 17:01:12</td>   <td>61048</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@5442a311]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1234776885</td>   <td></td> </tr>
+<tr bgcolor="74c583">  <td>20/03/05 14:50:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingFlightAndHotelForMultipleCity_TC_8(java.lang.reflect.Method)[pri:8, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1165b38]">bookingFlightAndHotelForMultipleCity_TC_8</td> 
+  <td>main@612097453</td>   <td></td> </tr>
+<tr bgcolor="b66d96">  <td>20/03/05 14:49:44</td>   <td>-17534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1165b38]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@612097453</td>   <td></td> </tr>
 </table>
