--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="83a2f9">  <td>20/02/25 17:02:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@239963d8]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-1@1454382205</td>   <td></td> </tr>
-<tr bgcolor="80ebad">  <td>20/02/25 17:02:21</td>   <td>17792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomWithThreeAdults_TC_1(java.lang.reflect.Method)[pri:1, instance:com.tripmasters.framework.testScript.BookingPageTestScript@239963d8]">bookingSingleRoomWithThreeAdults_TC_1</td> 
-  <td>pool-1-thread-1@1454382205</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>20/02/25 17:04:26</td>   <td>143140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@239963d8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>pool-1-thread-1@1454382205</td>   <td></td> </tr>
+<tr bgcolor="c0edeb">  <td>20/03/06 15:02:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@2b552920]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>pool-1-thread-1@1219358817</td>   <td></td> </tr>
+<tr bgcolor="79f379">  <td>20/03/06 15:02:40</td>   <td>15549</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.verifySpotlightLink_TC_14(java.lang.reflect.Method)[pri:13, instance:com.tripmasters.framework.testScript.BookingPageTestScript@2b552920]">verifySpotlightLink_TC_14</td> 
+  <td>pool-1-thread-1@1219358817</td>   <td></td> </tr>
 </table>
