--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,8 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.verifyPopularVacationPackages_TC_13</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.verifyOtherVacationPackages_TC_12</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.verifyCity_TC_10</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.verifyStartAgainLink_TC_15</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.verifyMoreHighlightAndAttractionLinks_Mob_TC_11</td></tr>
+<tr><td>com.tripmasters.framework.testScript.HomePageTestScript.verifyFooterText_TC_16</td></tr>
 </table>
