--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,18 +11,39 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<<<<<<< HEAD
-<<<<<<< HEAD
-<td>bookingFlightAndHotelForMultipleCity_TC_8</td>
-=======
-<td>bookingDetailswithPremiumEcomomy_TC_18</td>
->>>>>>> fc64b247ddecee4b766fd9cb38eff4dc6b6b9a69
+<td>bookingFlightsWithmultipleCities_TC_6</td>
 <td>smoke </td>
 </tr>
-=======
-<td>multipleCities</td>
-<td>&nbsp;</td></tr>
->>>>>>> 1ac9f1ecc2b65ac67232ebd26e0f94a4e54fbdef
+<tr>
+<td>&nbsp;</td>
+<td>removeAddedCity_TC_17</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingTwoRoomThreeAdultOneChild_TC_4</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>multipleCities_TC_21</td>
+<td>testdemo </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingFlightAndHotelForSingleCity_TC_7</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>bookingSingleRoomOneAdultOneChild_TC_2</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>getWithoutAir_TC_20</td>
+<td>regression </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
