--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,26 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<<<<<<< HEAD
-<<<<<<< HEAD
-<tr bgcolor="b66d96">  <td>20/03/05 14:49:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1165b38]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@612097453</td>   <td></td> </tr>
-<tr bgcolor="74c583">  <td>20/03/05 14:50:02</td>   <td>17534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingFlightAndHotelForMultipleCity_TC_8(java.lang.reflect.Method)[pri:8, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1165b38]">bookingFlightAndHotelForMultipleCity_TC_8</td> 
-  <td>main@612097453</td>   <td></td> </tr>
-=======
-<tr bgcolor="657a99">  <td>20/03/06 00:12:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@72d818d1]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1740189450</td>   <td></td> </tr>
-<tr bgcolor="bca669">  <td>20/03/06 00:12:39</td>   <td>10805</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingDetailswithPremiumEcomomy_TC_18(java.lang.reflect.Method)[pri:12, instance:com.tripmasters.framework.testScript.BookingPageTestScript@72d818d1]">bookingDetailswithPremiumEcomomy_TC_18</td> 
-  <td>main@1740189450</td>   <td></td> </tr>
-<tr bgcolor="657a99">  <td>20/03/06 00:14:35</td>   <td>126552</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@72d818d1]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1740189450</td>   <td></td> </tr>
->>>>>>> fc64b247ddecee4b766fd9cb38eff4dc6b6b9a69
-=======
-<tr bgcolor="8da5ba">  <td>20/03/11 13:33:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1a968a59]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="ceabc1">  <td>20/03/11 13:33:45</td>   <td>10520</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.multipleCities(java.lang.reflect.Method)[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1a968a59]">multipleCities</td> 
-  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="8da5ba">  <td>20/03/11 13:35:12</td>   <td>97936</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@1a968a59]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
->>>>>>> 1ac9f1ecc2b65ac67232ebd26e0f94a4e54fbdef
+<tr bgcolor="be8bc2">  <td>20/04/03 16:38:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1754638213</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>20/04/03 16:38:46</td>   <td>4284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingSingleRoomOneAdultOneChild_TC_2(java.lang.reflect.Method)[pri:2, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">bookingSingleRoomOneAdultOneChild_TC_2</td> 
+  <td>main@1754638213</td>   <td></td> </tr>
+<tr bgcolor="be8bc2">  <td>20/04/03 16:39:29</td>   <td>47481</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1754638213</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>20/04/03 16:39:32</td>   <td>50550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingTwoRoomThreeAdultOneChild_TC_4(java.lang.reflect.Method)[pri:4, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">bookingTwoRoomThreeAdultOneChild_TC_4</td> 
+  <td>main@1754638213</td>   <td></td> </tr>
+<tr bgcolor="be8bc2">  <td>20/04/03 16:39:40</td>   <td>58570</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1754638213</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>20/04/03 16:39:43</td>   <td>61088</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingFlightsWithmultipleCities_TC_6(java.lang.reflect.Method)[pri:6, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">bookingFlightsWithmultipleCities_TC_6</td> 
+  <td>main@1754638213</td>   <td></td> </tr>
+<tr bgcolor="be8bc2">  <td>20/04/03 16:39:51</td>   <td>69518</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1754638213</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>20/04/03 16:39:53</td>   <td>71720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.bookingFlightAndHotelForSingleCity_TC_7(java.lang.reflect.Method)[pri:7, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">bookingFlightAndHotelForSingleCity_TC_7</td> 
+  <td>main@1754638213</td>   <td></td> </tr>
+<tr bgcolor="be8bc2">  <td>20/04/03 16:39:56</td>   <td>74734</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1754638213</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>20/04/03 16:39:59</td>   <td>77509</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.getWithoutAir_TC_20(java.lang.reflect.Method)[pri:10, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">getWithoutAir_TC_20</td> 
+  <td>main@1754638213</td>   <td></td> </tr>
+<tr bgcolor="be8bc2">  <td>20/04/03 16:40:03</td>   <td>81543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1754638213</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>20/04/03 16:40:06</td>   <td>84146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.multipleCities_TC_21(java.lang.reflect.Method)[pri:10, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">multipleCities_TC_21</td> 
+  <td>main@1754638213</td>   <td></td> </tr>
+<tr bgcolor="be8bc2">  <td>20/04/03 16:40:06</td>   <td>84177</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1754638213</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>20/04/03 16:40:08</td>   <td>86048</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BookingPageTestScript.removeAddedCity_TC_17(java.lang.reflect.Method)[pri:11, instance:com.tripmasters.framework.testScript.BookingPageTestScript@23e028a9]">removeAddedCity_TC_17</td> 
+  <td>main@1754638213</td>   <td></td> </tr>
 </table>
